# grassland_static_scenario_generator

./: README.md  pyproject.toml
src/grassland_static_scenario_generator/: scenario_data_manager.py  scenarios.py
src/tests/: config_test.py
src/tests/data/: config.json
