[tool.poetry]
name = "grassland_static_scenario_generator"
version = "0.1.0"
description = "Generation of user defined scenarios for grassland futures"
authors = ["Colm Duffy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"